--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
-COPY requirements/dev.txt requirements/
+COPY requirements/ requirements/
 RUN pip install --no-cache-dir -r requirements/dev.txt
 
 # Copy application code
@@ -21,6 +21,9 @@ RUN useradd --create-home --shell /bin/bash app && \
     chown -R app:app /app
 
 USER app
+
+# Set PYTHONPATH to include src directory
+ENV PYTHONPATH=/app/src
 
 EXPOSE 8000
 
