Add explicit startCommand in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,9 @@ services:
     # Health check configuration
     healthCheckPath: /health
 
+    # Start command - use script that runs migrations
+    startCommand: /app/scripts/start.sh
+
     # Environment variables
     envVars:
       # Application
