--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
-COPY requirements/prod.txt requirements/
+COPY requirements/ requirements/
 RUN pip install --no-cache-dir -r requirements/prod.txt
 
 # Copy application code
